todo basic layout

--- a/src/pages/contacts/contacts.html
+++ b/src/pages/contacts/contacts.html
@@ -16,7 +16,7 @@
       class="nav bg-[#005B41] flex max-[380px]:flex-col lg:flex-row mb-4 text-gray-100"
     >
       <a
-        href=""
+        href="../todo/todo.html"
         class="flex justify-center border border-black w-full p-5 hover:bg-[rgba(0,0,0,0.2)] overflow-hidden break-words"
         >Todo</a
       >
