--- a/src/pages/todo/todo.html
+++ b/src/pages/todo/todo.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="../../output.css" />
     <script src="../../js/todo/todo.js" type="module" defer></script>
     <title>Todo</title>
@@ -106,22 +110,15 @@
           <tr>
             <th class="py-4 border border-black">Title</th>
             <th class="py-4 border border-black">Description</th>
-            <th class="py-4 border border-black">Importance</th>
             <th class="py-4 border border-black">Completed</th>
+            <th class="py-4 border border-black">Importance</th>
             <th class="py-4 border border-black">Actions</th>
           </tr>
         </thead>
-        <tbody id="todos" class="text-center [&>*:nth-child(odd)]:bg-slate-200">
-          <tr>
-            <td class="border p-2 border-black">Title</td>
-            <td class="border p-2 border-black">Description</td>
-            <td class="border p-2 border-black">Importance</td>
-            <td class="border p-2 border-black">
-              <input type="checkbox" name="completed" id="completed" />
-            </td>
-            <td class="border border-black">Actions</td>
-          </tr>
-        </tbody>
+        <tbody
+          id="todos"
+          class="text-center [&>*:nth-child(odd)]:bg-slate-200"
+        ></tbody>
       </table>
     </div>
   </body>
