todo form constants added

--- a/src/pages/todo/todo.html
+++ b/src/pages/todo/todo.html
@@ -97,7 +97,7 @@
         <button
           class="bg-green-400 text-white py-1 px-5"
           type="submit"
-          id="submit"
+          id="add-todo"
         >
           Add
         </button>
