--- a/src/pages/todo/todo.html
+++ b/src/pages/todo/todo.html
@@ -89,6 +89,7 @@
             type="number"
             name="importance"
             id="importance"
+            min="1"
             class="border border-black p-1"
             placeholder="Importance"
           />
@@ -96,7 +97,7 @@
 
         <button
           class="bg-green-400 text-white py-1 px-5"
-          type="submit"
+          type="button"
           id="add-todo"
         >
           Add
