--- a/src/pages/todo/todo.html
+++ b/src/pages/todo/todo.html
@@ -122,5 +122,101 @@
         ></tbody>
       </table>
     </div>
+
+    <div
+      id="update-modal"
+      tabindex="-1"
+      aria-hidden="true"
+      class="fixed flex justify-center items-center top-0 z-50 w-full h-full p-4 bg-black/85 "
+    >
+      <div class="relative flex justify-center max-h-full w-full max-w-2xl">
+        <!-- Modal content -->
+        <div class="relative rounded-lg shadow bg-gray-700 w-[80%]">
+          <!-- Modal header -->
+          <div
+            class="flex items-start justify-between rounded-t border-b p-5 border-gray-600"
+          >
+            <h3 class="text-xl font-semibold text-white lg:text-2xl">
+              Update todo
+            </h3>
+            <button
+              type="button"
+              class="ms-auto inline-flex h-8 w-8 items-center justify-center rounded-lg bg-transparent text-sm text-gray-400 hover:bg-gray-200 hover:text-gray-900 hover:bg-gray-600 hover:text-white"
+              id="x-close-modal"
+            >
+              <svg
+                class="h-3 w-3"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 14 14"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+                />
+              </svg>
+              <span class="sr-only">Close modal</span>
+            </button>
+          </div>
+          <!-- Modal body -->
+          <div class="space-y-6 p-6">
+            <div class="">
+              <label for="update-title" class="text-white">Title</label>
+              <input
+                type="text"
+                class="w-full p-2 border rounded-lg border-gray-600"
+                id="update-title"
+              />
+            </div>
+            <div class="">
+              <label for="update-description" class="text-white">Description</label>
+              <input
+                type="text"
+                class="w-full p-2 border rounded-lg border-gray-600"
+                id="update-description"
+              />
+            </div>
+
+            <div class="">
+              <label for="update-importance" class="text-white">Importance</label>
+              <input
+                type="number"
+                min="1"
+                class="w-full p-2 border rounded-lg border-gray-600"
+                id="update-importance"
+              />
+            </div>
+
+            <div class="flex">
+              <label for="update-completed" class="text-white">Completed</label>
+              <input type="checkbox" class="ml-2" id="update-completed" />
+            </div>
+          </div>
+          <!-- Modal footer -->
+          <div
+            class="flex items-center space-x-2 rtl:space-x-reverse rounded-b border-t p-6 border-gray-600"
+          >
+            <button
+              type="button"
+              class="rounded-lg bg-green-700 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 bg-green-600 hover:bg-green-700 focus:ring-green-800"
+              id="update-contact"
+            >
+              Accept
+            </button>
+            <button
+              type="button"
+              class="rounded-lg border border-gray-200 px-5 py-2.5 text-sm font-medium text-white hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 border-gray-500 bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white"
+              id="cancel-update"
+            >
+              Cancel
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
