--- a/src/pages/todo/todo.html
+++ b/src/pages/todo/todo.html
@@ -127,7 +127,7 @@
       id="update-modal"
       tabindex="-1"
       aria-hidden="true"
-      class="fixed flex justify-center items-center top-0 z-50 w-full h-full p-4 bg-black/85 "
+      class="fixed flex justify-center items-center top-0 z-50 w-full h-full p-4 bg-black/85 hidden"
     >
       <div class="relative flex justify-center max-h-full w-full max-w-2xl">
         <!-- Modal content -->
