profile page finished

--- a/src/pages/contacts/contacts.html
+++ b/src/pages/contacts/contacts.html
@@ -22,7 +22,7 @@
       >
 
       <a
-        href=""
+        href="../profile/user-profile.html"
         class="flex justify-center border border-black w-full p-5 hover:bg-[rgba(0,0,0,0.2)] overflow-hidden break-words"
         >Profile</a
       >
